--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -15,6 +15,8 @@ dependencies:
   78/esp_lcd_nv3023: ~1.0.0
   78/esp-wifi-connect: ~2.4.3
   78/esp-opus-encoder: ~2.4.0
+  78/esp-ml307: ~3.2.4
+  # 78/xiaozhi-fonts: ~1.3.2
   espressif/led_strip: ^2.5.5
   espressif/esp_codec_dev: ~1.3.6
   espressif/esp-sr: ~2.1.1
@@ -25,6 +27,8 @@ dependencies:
   espressif/esp_lcd_touch_gt911: ^1
   waveshare/esp_lcd_touch_cst9217: ^1.0.3
   espressif/esp_lcd_touch_cst816s: ^1.0.6
+  # lvgl/lvgl: ~9.2.2
+  # esp_lvgl_port: ~2.6.0
   espressif/esp_io_expander_tca95xx_16bit: ^2.0.0
   espressif2022/image_player: ==1.1.0~1
   espressif2022/esp_emote_gfx: ^1.0.0
@@ -61,7 +65,7 @@ dependencies:
     rules:
     - if: target in [esp32p4]
   espressif/esp_hosted:
-    version: 2.0.17
+    version: '2.0.17'
     rules:
     - if: target in [esp32h2, esp32p4]
   espressif/esp_wifi_remote:
@@ -76,4 +80,3 @@ dependencies:
   ## Required IDF version
   idf:
     version: '>=5.4.0'
-  78/esp-ml307: ^3.2.6
